# reproduce

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/en/: configuration.md  index.md  operations.md  prerequisites.md  troubleshooting.md
docs/ko/: configuration.md  index.md  operations.md  prerequisites.md  troubleshooting.md
scripts/: build-docs-pdf.sh  fetch-theme.sh
src/: bincode_utils.rs  checkpoint.rs  chrono_regression_tests.rs  collector.rs  config.rs  controller.rs  lib.rs  main.rs  migration.rs  netflow.rs  operation_log.rs  parser.rs  pipeline.rs  producer.rs  report.rs  security_log.rs  sender.rs  syslog.rs  zeek.rs
src/collector/: common.rs  file.rs  giganto_import.rs  log.rs  migration.rs  mod.rs  netflow.rs  operation_log.rs  security_log.rs  sysmon_csv.rs  zeek.rs
src/migration/: network.rs  sysmon.rs  tests.rs
src/netflow/: fields.rs  packet.rs  statistics.rs  templates.rs
src/parser/: giganto_import.rs  migration.rs  netflow.rs  operation_log.rs  security_log.rs  sysmon_csv.rs  zeek.rs
src/parser/giganto_import/: network.rs  sysmon.rs  tests.rs
src/parser/migration/: network.rs  sysmon.rs  tests.rs
src/parser/netflow/: fields.rs  packet.rs  statistics.rs  templates.rs
src/parser/security_log/: aiwaf.rs  axgate.rs  fgt.rs  mf2.rs  nginx.rs  shadow_wall.rs  sniper_ips.rs  sonic_wall.rs  srx.rs  tg.rs  ubuntu.rs  vforce.rs  wapples.rs
src/parser/sysmon_csv/: dns_query.rs  file_create.rs  file_create_stream_hash.rs  file_create_time.rs  file_delete.rs  file_delete_detected.rs  image_load.rs  network_connect.rs  pipe_event.rs  process_create.rs  process_tamper.rs  process_terminate.rs  registry_key_rename.rs  registry_value_set.rs
src/parser/zeek/: network.rs  tests.rs
src/security_log/: aiwaf.rs  axgate.rs  fgt.rs  mf2.rs  nginx.rs  shadow_wall.rs  sniper_ips.rs  sonic_wall.rs  srx.rs  tg.rs  ubuntu.rs  vforce.rs  wapples.rs
src/syslog/: dns_query.rs  file_create.rs  file_create_stream_hash.rs  file_create_time.rs  file_delete.rs  file_delete_detected.rs  image_load.rs  network_connect.rs  pe_file.rs  pipe_event.rs  process_create.rs  process_tamper.rs  process_terminate.rs  registry_key_rename.rs  registry_value_set.rs
src/zeek/: conn.rs  dce_rpc.rs  dns.rs  http.rs  kerberos.rs  network.rs  ntlm.rs  rdp.rs  smtp.rs  ssh.rs  tests.rs
tests/: cert.pem  cli_args.rs  config.toml  key.pem  logging.rs  signal_handling.rs  time_conversion_tests.rs
tests/fixtures/netflow/: v5_record.hex  v9_dataset.hex
