[package]
name = "reproduce"
version = "0.18.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
bincode = "1.3"
byteorder = "1.5"
bytesize = "1"
chrono = ">=0.4.35"
clap = { version = "4.4", features = ["wrap_help"] }
csv = "1.3"
ctrlc = { version = "3", features = ["termination"] }
giganto-client = { git = "https://github.com/aicers/giganto-client.git", tag = "0.15.2" }
nom = "7.1"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7"
pcap = "1"
quinn = "0.10"
rayon = "1.8"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
rustls = "0.21"                                                                           # should be the same version as what quinn uses
rustls-pemfile = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
