[package]
name = "reproduce"
version = "0.20.1"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1.3"
byteorder = "1.5"
bytesize = "1"
chrono = ">=0.4.35"
clap = { version = "4.4", features = ["wrap_help"] }
config = { version = "0.14", features = ["toml"], default-features = false }
csv = "1.3"
ctrlc = { version = "3", features = ["termination"] }
giganto-client = { git = "https://github.com/aicers/giganto-client.git", rev = "bf8885c" } # TODO modify tag version
nom = "7.1"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7"
pcap = "2"
quinn = { version = "0.11", features = ["ring"] }
rayon = "1.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pemfile = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
