[package]
name = "reproduce"
version = "0.22.1"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = { version = "2", features = ["serde"] }
byteorder = "1"
bytesize = "2"
chrono = "0.4"
config = { version = "0.15", features = ["toml"], default-features = false }
csv = "1"
ctrlc = { version = "3", features = ["termination"] }
giganto-client = { git = "https://github.com/aicers/giganto-client.git", rev = "3c9a505" }
num-traits = "0.2"
num_enum = "0.7"
pcap = "2"
quinn = { version = "0.11", features = ["ring"] }
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pemfile = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[lints.clippy]
pedantic = "warn"
